infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conduit
  labels:
    name: conduit
    environment: production
